@@ -23,14 +23,15 @@ sub new {
   my @these_revs = $repo->command('rev-list', '--all');
   my @commit_info;
   for my $commit ( reverse @these_revs ) {
-    chop $commit;
     my $commit_info = $repo->command('show', '--pretty=fuller', $commit);
     my @files = ($commit_info =~ /\+\+\+\s+b\/(.+)/g);
     my ($author) = ($commit_info =~ /Author:\s+(.+)/);
     my ($commit) = ($commit_info =~ /Commit:\s+(.+)/);
+    my ($commit_date) = ($commit_info =~ /CommitDate:\s+(.+)/);
     push @commit_info, { files => \@files,
 			 author => $author,
-			 commit => $commit};
+			 commit => $commit,
+			 commit_date => $commit_date};
   }
   my $commits = { _repo => $dir,
 		  _name => $repo_name,
@@ -66,7 +67,7 @@ Git::Repo::Commits - Get all commits in a repository
 
 =head1 VERSION
 
-This document describes Git::Repo::Commits version 0.0.3
+This document describes Git::Repo::Commits version 0.0.7
 
 
 =head1 SYNOPSIS
